@@ -1,3 +1,9 @@
+2001-09-03  Bradford Hovinen  <hovinen@ximian.com>
+
+	* capplet-util.c (set_moniker_cb): Free the full moniker to
+	correct memory leak
+	(set_moniker_cb): Disconnect old signal handler
+
 2001-08-20  Bradford Hovinen  <hovinen@ximian.com>
 
 	* capplet-util.c (get_default_moniker): Update moniker being used
